all pages functional, further sytling

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
       <div id="page-links">
           <ul>
             <li><a href="./views/aboutme.html" >About Me</a></li>
-            <li><a href="./views/gameinfo.html">About The Game</a></li>
+            <li><a href="./views/gameinfo.html">Project Info</a></li>
             <li><a href="./views/demo.html">The Demo</a></li>
           </ul>
       </div>
